--- a/src/components/Staking/style.module.css
+++ b/src/components/Staking/style.module.css
@@ -1,18 +1,11 @@
-.wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  min-height: 100vh;
-  padding: 150px 0;
-  padding-top: 200px;
-}
 .stakeWrapper {
   display: flex;
   flex-direction: column;
 
   gap: 14px;
-  max-width: 530px;
+  width: 100%;
+  height: 100%;
+
   background: rgba(214, 237, 255, 0.1);
   border-radius: 22px;
   padding: 18px;
@@ -93,12 +86,7 @@
   padding: 12px 15px;
   width: 100%;
 }
-@media only screen and (max-width: 991px) {
-  .wrapper {
-    padding-top: 140px;
-    padding-bottom: 80px;
-  }
-}
+
 @media only screen and (max-width: 520px) {
   .heading {
     font-size: 16px;
@@ -106,6 +94,7 @@
 }
 @media only screen and (max-width: 380px) {
   .stakeWrapper {
-    padding: 18px 0px;
+    padding: 18px 5px;
+    padding-bottom: 12px;
   }
 } ;
