--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,11 +1,14 @@
+.home {
+  width: 100%;
+  max-width: 1116px;
+}
+
 .wrapper {
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 25px;
-  width: 100%;
 
-  max-width: 1116px;
   min-height: 100vh;
   padding: 150px 0;
   padding-top: 200px;
