--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=B612:wght@400;700&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=B612:wght@400;700&family=Inter:wght@300;400;500;600;700;800;900&display=swap");
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -44,14 +42,3 @@ p {
   width: 95%;
   margin: 0 auto;
 }
-/* input[type="number"] {
-  -moz-appearance: textfield;
-}
-
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  display: none;
-}
-input[type="date"]::-webkit-calendar-picker-indicator {
-  filter: invert(1);
-} */
