--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,3 +1,8 @@
+.container {
+  max-width: 1116px;
+  width: 95%;
+  margin: 0 auto;
+}
 .wrapper {
   margin: 0 auto;
   display: grid;
@@ -16,5 +21,11 @@
   .wrapper {
     padding-top: 140px;
     padding-bottom: 80px;
+  }
+}
+
+@media only screen and (max-width: 380px) {
+  .container {
+    width: 98%;
   }
 }
