--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,8 +1,3 @@
-.myContainer {
-  max-width: 1116px;
-  width: 95%;
-  margin: 0 auto;
-}
 .wrapper {
   margin: 0 auto;
   display: grid;
@@ -13,8 +8,9 @@
   padding-top: 200px;
 }
 @media only screen and (max-width: 991px) {
-  .myContainer {
+  .wrapper {
     max-width: 546px;
+    margin: 0 auto;
     grid-template-columns: 1fr;
     padding-top: 140px;
     padding-bottom: 80px;
