--- a/src/components/Home/styles.module.css
+++ b/src/components/Home/styles.module.css
@@ -2,9 +2,9 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 25px;
-  min-height: 100vh;
+  /* min-height: 100vh;
   padding: 150px 0;
-  padding-top: 200px;
+  padding-top: 200px; */
 }
 @media only screen and (max-width: 991px) {
   .home {
