--- a/src/components/Home/styles.module.css
+++ b/src/components/Home/styles.module.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 25px;
+  width: 100%;
   /* min-height: 100vh;
   padding: 150px 0;
   padding-top: 200px; */
