--- a/src/pages/Home/styles.module.css
+++ b/src/pages/Home/styles.module.css
@@ -3,9 +3,9 @@
   grid-template-columns: 1fr 1fr;
   gap: 25px;
   width: 100%;
-  /* min-height: 100vh;
+  min-height: 100vh;
   padding: 150px 0;
-  padding-top: 200px; */
+  padding-top: 200px;
 }
 @media only screen and (max-width: 991px) {
   .home {
