--- a/src/components/HistoryOfStacking/TokenHistory/TokenHistory.module.css
+++ b/src/components/HistoryOfStacking/TokenHistory/TokenHistory.module.css
@@ -32,6 +32,8 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
+  max-height: 500px;
+  overflow: auto;
 }
 .historyWrapper {
   border-radius: 10px;
@@ -74,6 +76,23 @@
 
 .unstakeHistories .text {
   color: #d6edff;
+}
+Firefox .grScrollbar {
+  scrollbar-width: thin;
+}
+
+/* Chrome, Edge, and Safari */
+.grScrollbar::-webkit-scrollbar {
+  width: 2px;
+}
+
+.grScrollbar::-webkit-scrollbar-track {
+  background: rgba(250, 250, 250, 0.2);
+}
+
+.grScrollbar::-webkit-scrollbar-thumb {
+  border-radius: 100vh;
+  border: none;
 }
 @media only screen and (max-width: 520px) {
   .historyWrapper {
