--- a/src/pages/Home/styles.module.css
+++ b/src/pages/Home/styles.module.css
@@ -12,6 +12,10 @@
   padding-top: 200px;
 }
 @media only screen and (max-width: 991px) {
+  .wrapper {
+    width: 100%;
+    transform: scale(1);
+  }
   .home {
     max-width: 546px;
     margin: 0 auto;
